public/styles.css
@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
@import url(https://fonts.googleapis.com/css?family=Noto+Sans:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);

.body-styling {
  background-color: #2e3440;
  color: white;
}

.content {
  max-width: 80%;
  margin: auto;
}

.title, .title:hover, .title:visited, .title:active {
  /* font-family:'Courier New', Courier, monospace; */
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  text-decoration: none;
  color: white;
}

.nav-li, .nav-li:visited, .nav-li:active {
  text-decoration: none;
  color: white;
}

.nav-li:hover {
  color: gray;
}

nav {
  display: flex;
  justify-content: space-between;
  margin-bottom: 60px;
  padding-bottom: 10px;
  border-bottom: 1px solid #ddd;
  text-transform: uppercase;
}

nav ul{
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}
nav li{
  list-style-type: none;
  margin-left: 20px;
  text-decoration: none;
}
nav h1{
  font-size: 3em;
}
nav p, nav a{
  color: #777;
  font-weight: 300;
}

.search-bar {
  text-align: center;
}

.searchbar {
  min-width: 400px;
  font-family: 'poppins';
}

.wrapper {
  width: 100%;
  max-width: 31.25rem;
  margin: 6rem auto;
}

.label {
  font-size: .625rem;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: +1.3px;
  margin-bottom: 1rem;
}

.searchBar {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
}

#searchQueryInput {
  width: 100%;
  height: 2.8rem;
  background: #f5f5f5;
  outline: none;
  border: none;
  border-radius: 1.625rem;
  padding: 0 3.5rem 0 1.5rem;
  font-size: 1rem;
}

#searchQuerySubmit {
  width: 3.5rem;
  height: 2.8rem;
  margin-left: -3.5rem;
  background: none;
  border: none;
  outline: none;
}

#searchQuerySubmit:hover {
  cursor: pointer;
}

/* potential mobile styling
.container {
  display: flex;

  justify-content: center;
} */

.list-header {
  background-color: #152238;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  flex-direction: row;
  flex-wrap: nowrap;
  height: 60px;
}

.anchor-styling {
  text-decoration: none;
  color: black;
}

.row {
  margin: 0;
}

.form-styling {
  margin: 0;
}

.list-elem:hover {
  color: #333333;
  transition: .2s;
}

div.list-elem:nth-child(even) {
  background: #485e7b;
}
div.list-elem:nth-child(odd) { 
  background: #60818f;
}

.element-image-title {
  font-family: 'poppins';
  height: auto;
  max-width: 300px;
  display: inline-flex;
  padding-left: 0%;
  justify-content: center;
  margin: auto;
}

.element-image {
  max-width: 300px;
  display: inline-block;
  padding: 0%;
  width: 5em;
  height: auto;
  object-fit: cover;
}

.element-title {
  font-family: 'poppins';
  display: inline-flex;
  justify-content: center;
  max-width: 250px;
  align-items: center;
  margin: auto;
}

.element-release-date {
  font-family: 'poppins';
  display: inline-flex;
  justify-content: center;
  max-width: 250px;
  align-items: center;
  margin: auto;
}

/* .element-company {
  font-family: 'poppins';
  display: inline-flex;
  justify-content: center;
  max-width: 250px;
  margin-left: 100px;
  align-items: center;
} */

.element-company {
  font-family: 'poppins';
  display: inline-flex;
  justify-content: center;
  max-width: 250px;
  align-items: center;
  margin: auto;
}

footer {
  text-align: center;
}

/* gameDetails styling */

.game-title {
  padding: 10px;
  text-align: center;
  font-family: Arial;
  font-weight: bold;
  font-size: 40px;
}

.game-info {
  margin: auto;
  margin-top: 50px;
}

.game-box-art {
  max-width: 70%;
  height: auto;
  float: right;
  padding-right: 10px;
}

.game-description {
  float: left;
  padding-left: 10px;
  text-align: left;
  margin-right: 100px;
  padding-right: 10px;
}

.info-piece {
  margin-top: 5px;
  margin-bottom: 5px;
}

.container {
  justify-content: center;
  align-items: center;
  margin: auto;
  max-width: 80%;
}

.art-image {
  max-width: 300px;
  max-height: fit-content;
}

.side-one {
  float: right;
}

.slide-body {
  min-height: 25vh;
  display: grid;
  place-items: center;
}

.slider {
  height: 250px;
  margin: auto;
  position: relative;
  width: 90%;
  display: grid;
  place-items: center;
  overflow: hidden;
}

.slide-track {
  counter-reset: screenshot-counter 0;
  display: flex;
  width: calc((screenshot-counter) * 250px);
  animation: scroll 40s linear infinite;
}

.slide-track2 {
  counter-reset: artwork-counter 0;
  display: flex;
  width: calc((artwork-counter) * 250px);
  animation: scroll2 40s linear infinite;
}

@keyframes scroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(calc(-250px * var(--number)));
  }
}

@keyframes scroll2 {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(calc(-250px * var(--number2)));
  }
}

.slide {
  height: 200px;
  width: 250px;
  display: flex;
  align-items: center;
  padding: 15px;
  perspective: 100px;
}

.slide2 {
  height: 200px;
  width: 250px;
  display: flex;
  align-items: center;
  padding: 15px;
  perspective: 100px;
}

.slide-track .slide {
  counter-increment: screenshot-counter 1;
}

.slide-track .slide {
  counter-increment: artwork-counter 1;
}

.slide:hover {
  cursor: pointer;
}

.img-scroll {
  width: 100%;
  transition: transform 1s;
}

.img-scroll:hover {
  transform: translateZ(20px);
}

.img-grow {
  transition: .2s;
}

.img-grow:hover {
  scale: 1.1;
}

/* gradient shadows */

.slider::before,
.slider::after {
  background: linear-gradient(to right, rgba(46,52,64,1) 0%, 
  rgba(46,52,64,0) 100%);
  content: '';
  height: 100%;
  position: absolute;
  width: 15%;
  z-index: 2;
}

.slider::before {
  left: 0;
  top: 0;
}

.slider::after {
  right: -1;
  top: 0;
  transform: rotateZ(180deg);
}

/* When list of artworks/screenshots < 6 */

.small-list-positioning {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin: auto;
}

.small-list {
  min-height: 30vh;
  position: relative;
  display: inline-flex;
  place-items: center;
  justify-content: space-around;
  align-items: center;
}

.image-styling {
  height: 250px;
  max-width: 250px;
  padding: 15px;
  perspective: 100px;
  transition: .2s;
  object-fit: cover;
}

.image-styling:hover {
  transform: scale(1.1);
  transition: .2s;
}

/* h3 when no images are found */

.empty-list {
  padding-top: 10px;
  text-align: center;
  color: #6c757d;
}

